force-app/main/default/objects/ProformaLineItem__c/fields/Aportaciones_2__c.field-meta.xml
<CustomField>
    <fullName>Aportaciones_2__c</fullName>
    <label>% Aportaciones</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>