force-app/main/default/objects/ProformaLineItem__c/fields/CBMMasterBox__c.field-meta.xml
<CustomField>
    <fullName>CBMMasterBox__c</fullName>
    <label>CBM MasterBox</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>