force-app/main/default/objects/ProformaLineItem__c/fields/CBMTotal__c.field-meta.xml
<CustomField>
    <fullName>CBMTotal__c</fullName>
    <formula>NumeroDeCajas__c *  CBMMasterBox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBM Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>