force-app/main/default/objects/ProformaLineItem__c/fields/Codigo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Producto__c</fullName>
    <formula>Producto__r.CodigoDeProductoBase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Producto</label>
    <type>Text</type>
</CustomField>