force-app/main/default/objects/ProformaLineItem__c/fields/CostoExtraTot__c.field-meta.xml
<CustomField>
    <fullName>CostoExtraTot__c</fullName>
    <formula>CostoExtraUnitario__c * Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Extra (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>