force-app/main/default/objects/ProformaLineItem__c/fields/CostoExtraUnitario__c.field-meta.xml
<CustomField>
    <fullName>CostoExtraUnitario__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Costo Extra</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>