force-app/main/default/objects/ProformaLineItem__c/fields/CostoFabrica__c.field-meta.xml
<CustomField>
    <fullName>CostoFabrica__c</fullName>
    <label>Costo Fábrica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>