force-app/main/default/objects/ProformaLineItem__c/fields/CostoFabricaTot__c.field-meta.xml
<CustomField>
    <fullName>CostoFabricaTot__c</fullName>
    <formula>CostoFabrica__c * Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Fabrica (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>