force-app/main/default/objects/ProformaLineItem__c/fields/CostoTotalUnitario__c.field-meta.xml
<CustomField>
    <fullName>CostoTotalUnitario__c</fullName>
    <formula>CostoFabrica__c + CostoExtraUnitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Total Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>