force-app/main/default/objects/ProformaLineItem__c/fields/Importe_Neto_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Neto_Nuevo__c</fullName>
    <formula>ImporteTotal__c - (ImporteTotal__c * ( Aportaciones_2__c + Convenio_2__c +  Porcentaje_Item__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Neto (Nuevo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>