force-app/main/default/objects/ProformaLineItem__c/fields/ImporteTotal__c.field-meta.xml
<CustomField>
    <fullName>ImporteTotal__c</fullName>
    <formula>PrecioUnitario__c * NumeroDeCajas__c * UnidadesPorMasterBox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Venta (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>