force-app/main/default/objects/ProformaLineItem__c/fields/ImporteVentaNeto__c.field-meta.xml
<CustomField>
    <fullName>ImporteVentaNeto__c</fullName>
    <formula>ImporteTotal__c - (ImporteTotal__c * (Proforma__r.Cuenta__r.PorcentajeAportaciones__c + Proforma__r.Cuenta__r.PorcentajeConvenio__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Venta Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>