force-app/main/default/objects/ProformaLineItem__c/fields/Margen__c.field-meta.xml
<CustomField>
    <fullName>Margen__c</fullName>
    <formula>1 - (CostoTotal__c) /  Importe_Neto_Nuevo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>