force-app/main/default/objects/ProformaLineItem__c/fields/PrecioUnitario__c.field-meta.xml
<CustomField>
    <fullName>PrecioUnitario__c</fullName>
    <description>Originalmente, es el Precio Unitario que viene dado por el Opportunity Line Item</description>
    <inlineHelpText>Originalmente, es el Precio Unitario que viene dado por el Opportunity Line Item</inlineHelpText>
    <label>Precio de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>