force-app/main/default/objects/ProformaLineItem__c/fields/Proforma__c.field-meta.xml
<CustomField>
    <fullName>Proforma__c</fullName>
    <label>Proforma</label>
    <referenceTo>Proforma__c</referenceTo>
    <relationshipLabel>Proforma Line Items</relationshipLabel>
    <relationshipName>ProformaLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>