force-app/main/default/objects/ProformaLineItem__c/fields/VirtualContainer__c.field-meta.xml
<CustomField>
    <fullName>VirtualContainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Representa una agrupación por contenedor previo al envío del pedido. Usado por el sistema para soporte al armado proformas de mas de 1 contenedor.</description>
    <inlineHelpText>Representa una agrupación por contenedor previo al envío del pedido. Usado por el sistema para soporte al armado proformas de mas de 1 contenedor.</inlineHelpText>
    <label>Virtual Container</label>
    <referenceTo>Virtual_Container__c</referenceTo>
    <relationshipLabel>Proforma Line Items</relationshipLabel>
    <relationshipName>Proforma_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>